# acoustic-solo-dadaGP

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
asdadagp/: __init__.py  cli.py  const.py  decoder.py  encoder.py  process_tokens.py  processor.py  token_processor.py  token_splitter.py  utils.py
asdadagp/examples/: maroon5-payphone_-m.json  merge_rest_test_full.json  repeat_measure_test_full.json  test_measures_output.json
examples/: ed_sheeran-photograph_-b.json  ed_sheeran-photograph_-m.json  ed_sheeran-supermarket_flowers_-b.json  ed_sheeran-supermarket_flowers_full.json  merge_rest_test_-b.json  merge_rest_test_-m.json  repeat_measure_test_-b.json  repeat_measure_test_-m.json
legacy/: dadagp.py  simplified_dadagp.py
legacy/examples/: ed_sheeran-photograph_full.json  ed_sheeran-supermarket_flowers_-m.json  maroon5-payphone_-b.json  maroon5-payphone_full.json
legacy/processing/: token_splitter.py
processing/: raw_token_processor.py
tests/: test_cli.py  test_decoder.py  test_encoder.py  test_processing.py  test_processor.py  test_splitter.py  test_utils.py
tests/data/: bensusan_pierre-dame_lombarde.gp5
