[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acoustic-solo-dadaGP"
version = "0.1.0"
description = "A package for processing guitar pro files and related tasks."
authors = [
    { name="Austin Liu", email="austin_f_liu@brown.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = [
    "PyGuitarPro"
]

[project.urls]
"Homepage" = "https://github.com/austinliu05/acoustic-solo-dadaGP" 

[tool.setuptools]
package-dir = {"" = "asdadagp"} 