[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acoustic-solo-dadaGP"
version = "0.1.0"
description = "A package for processing guitar pro files and related tasks."
authors = [
    { name="Austin Liu", email="austin_f_liu@brown.edu" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = [
    "PyGuitarPro>=0.6",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "librosa>=0.8.0",
    "matplotlib>=3.3.0",
    "torch>=1.8.0",
    "torchaudio>=1.8.0",
    "transformers>=4.0.0",
    "tokenizers>=0.10.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
]

[project.scripts]
asdadagp = "asdadagp.cli:main"

[project.urls]
"Homepage" = "https://github.com/austinliu05/acoustic-solo-dadaGP" 

[tool.setuptools]
package-dir = {"" = "asdadagp"} 